<?xml version="1.0"?>
<package>
  <name>ee5900_jackal_description</name>
  <version>0.0.1</version>
  <description>The ee5900_jackal_description package</description>

  <maintainer email="djchopp@mtu.edu">Derek Chopp</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>jackal_description</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  
  <run_depend>jackal_description</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  
  <export>
  
  </export>
</package>
