<?xml version="1.0"?>
<package>
  <name>ee5900_jackal_gazebo</name>
  <version>0.0.1</version>
  <description>The ee5900_jackal_gazebo package</description>

  <maintainer email="djchopp@mtu.edu">Derek Chopp</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>gazebo_ros</build_depend>
  <build_depend>ee5900_jackal_description</build_depend>
  <build_depend>jackal_control</build_depend>
  
  <run_depend>gazebo_ros</run_depend>
  <run_depend>ee5900_jackal_description</run_depend>
  <run_depend>jackal_control</run_depend>
  
  <export>
  
  </export>
</package>
